remove padding and add text-align:left

--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@
 	}
 
 	table, thead, tbody, th, td, tr { 
-		display: inline-block; 
+		display: block; 
 	}
 	thead tr { 
 		position: absolute;
@@ -1618,8 +1618,8 @@ body.error404 .search-form input {
 .tix_tickets_table .tix-column-quantity,
 .tix-ticket-form .tix-column-price,
 .tix-ticket-form .tix-column-quantity {
-	text-align: right;
-	padding:15px;
+	text-align: left;
+
 }
 .tix_tickets_table .tix-row-coupon td,
 .tix-ticket-form .tix-row-coupon td {
