add padding to order-summary

--- a/style.css
+++ b/style.css
@@ -64,6 +64,11 @@
 		width:0;
 	}
 
+	.tix-order-summary .tix-row-total td,
+.tix-order-summary .tix-column-price {
+	text-align: left;
+}
+
 	table, thead, tbody, th, td, tr { 
 		display: block; 
 	}
