--- a/style.css
+++ b/style.css
@@ -2258,7 +2258,7 @@ img.aligncenter{
 	display:none;
 }
 
-@media screen and (max-width: 600px)
+@media screen and (max-width: 600px){
     #footer-widget-3 {
         margin-top: 126px;
     }
