remove the blank space from fixed navigation menu

--- a/style.css
+++ b/style.css
@@ -2042,6 +2042,7 @@ body div.slideshow-window * img {
 }
 @media screen and (min-width: 880px) {
 	#header-navigation {
+		top:0;
 		position: fixed;
 		z-index: 99999;
 		box-shadow: 0 8px 6px -6px #999
