--- a/style.css
+++ b/style.css
@@ -633,6 +633,11 @@ max-width: 320px;
 max-height:160px;
 display: block;
 }
+.wp-image-2149.size-medium.alignnone{
+	max-width: 210px;
+	max-height: 145px;
+	display: block;
+}
 /***********************
 Subscribe Widgets
 ***********************/
