--- a/style.css
+++ b/style.css
@@ -643,6 +643,9 @@ margin-left:0
 	display: block;
 	margin-left:0
 }
+.size-full.wp-image-2029.aligncenter{
+	margin-left:0;
+}
 /***********************
 Subscribe Widgets
 ***********************/
