cssiginter remove margin

--- a/style.css
+++ b/style.css
@@ -643,9 +643,10 @@ margin-left:0
 	display: block;
 	margin-left:0
 }
-.size-full.wp-image-2029.aligncenter{
+img.size-full.wp-image-2029.aligncenter{
 	margin-left:0;
 }
+
 /***********************
 Subscribe Widgets
 ***********************/
