.alignnone.wp-image-2286.size-full

--- a/style.css
+++ b/style.css
@@ -645,6 +645,8 @@ margin-left:0
 	display: block;
 	margin-left:0
 }
+
+img.alignnone.wp-image-2286.size-full,
 img.wp-image-2191.size-full.alignnone,
 img.size-full.wp-image-2029.aligncenter{
 	margin-left:0;
