wp-image-2320 align left

--- a/style.css
+++ b/style.css
@@ -645,7 +645,7 @@ margin-left:0
 	display: block;
 	margin-left:0
 }
-
+img.alignleft.size-full.wp-image-2320,
 img.alignnone.wp-image-2286.size-full,
 img.wp-image-2191.size-full.alignnone,
 img.size-full.wp-image-2029.aligncenter{
