--- a/style.css
+++ b/style.css
@@ -639,6 +639,8 @@ max-height:160px;
 display: block;
 margin-left:0
 }
+
+.alignleft.size-full.wp-image-2316,
 .wp-image-2149.size-medium.alignnone{
 	max-width: 210px;
 	max-height: 145px;
