fixthe wp-image-2218

--- a/style.css
+++ b/style.css
@@ -639,7 +639,7 @@ max-height:160px;
 display: block;
 margin-left:0
 }
-
+.aligncenter.size-full.wp-image-2218,
 .alignleft.size-full.wp-image-2316,
 .wp-image-2149.size-medium.alignnone{
 	max-width: 210px;
