change the size of sponsors

--- a/style.css
+++ b/style.css
@@ -632,6 +632,8 @@ img.aligncenter.business-sponsor,
 img.aligncenter.gold-sponsor{
 	margin-left:0;
 }
+.alignleft.size-full.wp-image-2320,
+.alignnone.wp-image-2286.size-full,
 .wp-image-2165.size-full.alignnone,
 img.aligncenter.silver-sponsor{
 max-width: 320px;
