--- a/style.css
+++ b/style.css
@@ -550,8 +550,8 @@ a.btn.btn-info span::after {
 }
 @media screen and (max-width: 800px) and (min-width: 600px){
 .wcb_widget_sponsors .sponsor-logo img {
-    height: auto !important;
-    max-height: 70px !important;
+	height: auto !important;
+	max-height: 70px !important;
 	}
 }
 @media screen and (max-width: 600px){
@@ -789,7 +789,7 @@ padding:0;
 */
 table.tix_tickets_table {
 	position: relative;
-    padding: 15px 0 46px;
+	padding: 15px 0 46px;
 }
 table.tix_tickets_table td.tix-column-quantity select{
 width:85px!important;
@@ -2224,7 +2224,7 @@ body:not(.home) #wp-custom-header img{
 	max-width: 200px;
 }
 body:not(.home) p.site-title a, body:not(.home) h1.site-title a {
-    font-size: 3.1rem;
+	font-size: 3.1rem;
 }
 body:not(.home)	.custom-header {
 		height: 600px;
@@ -2238,13 +2238,13 @@ img.aligncenter{
 	display: block;
 	margin: 2.438em auto 2.438em auto;
 	border: 4px solid #fff;
-    -moz-transition: all .3s ease;
-    -o-transition: all .3s ease;
-    -webkit-transition: all .3s ease;
-    transition: all .3s ease;
-    box-shadow: 0 2px 16px rgba(0,0,0,0.36);
-    -webkit-box-shadow: 0 2px 16px rgba(0,0,0,0.36);
-    -moz-box-shadow: 0 2px 16px rgba(0,0,0,0.36);
+	-moz-transition: all .3s ease;
+	-o-transition: all .3s ease;
+	-webkit-transition: all .3s ease;
+	transition: all .3s ease;
+	box-shadow: 0 2px 16px rgba(0,0,0,0.36);
+	-webkit-box-shadow: 0 2px 16px rgba(0,0,0,0.36);
+	-moz-box-shadow: 0 2px 16px rgba(0,0,0,0.36);
 }
 #main article button a{
 	color:#fff;
@@ -2262,7 +2262,7 @@ img.aligncenter{
 	text-decoration: none;
 }
 #main article .entry-content img.size-full {
-    width: auto;
+	width: auto;
 }
 
 @media screen and (max-width: 880px){
@@ -2293,7 +2293,17 @@ img.aligncenter{
 
 
 @media screen and (max-width: 600px){
-    #footer-widget-3 {
-        margin-top: 126px;
-    }
+	#footer-widget-3 {
+		margin-top: 126px;
+	}
+}
+
+.xorigoi_epikinonias_wrapper {
+	display: grid;
+	grid-template-columns: 33fr 33fr 33fr;
+	grid-gap: 10px;
+}
+
+.xorigoi_epikinonias_wrapper img {
+	max-width: 150px !important;
 }
