--- a/style.css
+++ b/style.css
@@ -2302,8 +2302,11 @@ img.aligncenter{
 	display: grid;
 	grid-template-columns: 33fr 33fr 33fr;
 	grid-gap: 10px;
+	align-items: center;
 }
 
 .xorigoi_epikinonias_wrapper img {
 	max-width: 150px !important;
+	margin: 0 !important;
+	padding: 0 !important;
 }
