Add width to custom-html-18

--- a/style.css
+++ b/style.css
@@ -290,7 +290,8 @@ h1.site-title {
 #custom_html-13,
 #custom_html-14,
 #custom_html-15,
-#custom_html-16 {
+#custom_html-18,
+ {
 	width: 290px;
 	text-align: center;
 }
