--- a/style.css
+++ b/style.css
@@ -2182,6 +2182,10 @@ article.post-19 > .entry-content > ol {
 	#footer-widget-2 .wcb_widget_sponsors .sponsor-logo {
 		width: 100%;
 	}
+	#footer-widget-2{
+		padding: 145px 0 685px 0;
+	}
+
 	#subscribe-email input {
 		width: 100% !important;
 		text-align: center;
