fix link from bg image

--- a/style.css
+++ b/style.css
@@ -2330,3 +2330,10 @@ img.aligncenter{
 	text-decoration: none !important;
 	background-image: none !important;
 }
+
+.page-id-7 a{
+	background-image: none;
+    background-image: none;
+    background-image: none;
+    background-position: left 0 bottom 0;
+}
