--- a/style.css
+++ b/style.css
@@ -2331,7 +2331,7 @@ img.aligncenter{
 	background-image: none !important;
 }
 
-.page-id-7 a{
+.page-id-7 .entry-content a{
 	background-image: none;
     background-image: none;
     background-image: none;
