--- a/style.css
+++ b/style.css
@@ -2332,5 +2332,11 @@ img.aligncenter{
 }
 
 .page-id-7 .entry-content a{
-
+	background-image: none;
+    background-image: none;
+    background-image: none;
+	background-position: left 0 bottom 0;
+}
+.page-id-7 .entry-content a:hover{
+	color:	#28267a;
 }
