--- a/style.css
+++ b/style.css
@@ -2331,12 +2331,13 @@ img.aligncenter{
 	background-image: none !important;
 }
 
-.page-id-7 .entry-content a{
+.page-id-7  #main  a{
 	background-image: none;
     background-image: none;
     background-image: none;
 	background-position: left 0 bottom 0;
 }
-.page-id-7 .entry-content a:hover{
+.page-id-7 #main a:hover{
 	color:	#28267a;
+	text-decoration:underline;
 }
